<resources>
    <string name="app_name">寸光</string>
    <string name="end_time_exceed_warning" translatable="false">结束时间应晚于开始时间</string>
    <string name="all">ALL</string>
    <string name="year_month_day">YEAR-MONTH-DAY</string>
    <string name="year_month">YEAR-MONTH</string>
    <string name="month_day_hour_minute">MONTH-DAY-HOUR-MINUTE</string>
    <string name="hour_minute">HOUR-MINUTE</string>
    <string name="cancel">取消</string>
    <string name="title">请选择时间</string>
    <string name="confirm">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="week">星期</string>
    <string name="hour">时</string>
    <string name="minute">分</string>

    <string name="select_date">选择日期</string>
    <string name="current_date">当前日期</string>
    <string name="select_time">选择时间</string>
    <string name="current_time">当前时间</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="template_item_name">事项名称</string>
    <string name="delete">删除</string>
    <string name="save">保存</string>
    <string name="add_item_button">add_item</string>

    <string name="habit_title">习惯属性</string>
    <string name="habit_name">习惯名称</string>
    <string name="habit_category">习惯属性</string>
    <string name="week_time">总时长</string>
    <string name="week_time_hour">小时</string>
    <string name="advanced_option">高级选项</string>
    <string name="habit_complete"> 完 成</string>
    <string name="habit_name_hint">思考</string>
    <string name="week_time_hint">0</string>

    <string name="advanced_option_title">高级选项</string>
    <string name="time_period">时间段</string>
    <string name="time_once">单次时长</string>
    <string name="habit_place">习惯地点</string>
    <string name="habit_place_hint">未知</string>
    <string name="time_remind">定时提醒</string>
    <string name="time_remind_switch">开</string>
    <string name="habit_priority">习惯优先级</string>
    <string name="advance_forward">提前</string>
    <string name="advance_backward">分钟</string>
    <string name="habit_quote">箴言</string>
    <string name="advanced_back">返回</string>

    <string name="rechosequote">重新选择</string>
    <string name="chosequote">未选择</string>
    <string name="advance_time_hint">5</string>
    <string name="show_quote">show_quote</string>

    <string name="quote_title">箴言详情</string>
    <string name="quote_name">箴言</string>
    <string name="quote_author">作者</string>
    <string name="quote_words_hint">寸光</string>
    <string name="quote_author_hint">佚名</string>

    <string name="event_name">事件名称</string>
    <string name="event_input_hint">名称</string>

    <string name="desc"></string>

    <string name="card_number">序号</string>
    <string name="card_title">标题</string>

    <string name="words">一寸光阴一寸金</string>
    <string name="author">作者</string>

    <string name="fragment_habit_title">个人习惯</string>
    <string name="fragment_quote_title">个人箴言</string>
    <string name="fragment_template_title">个人模板</string>
    <string name="fragment_white_title">白名单</string>

    <string name="app_title">寸光</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login">登录</string>
    <string name="login_to_register">新用户注册</string>
    <string name="login_problem">登录遇到问题？</string>
    <string name="login_thirdpart">———使用第三方软件登录———</string>
    <string name="username_hint">请输入用户名</string>
    <string name="email_hint">请输入邮箱</string>
    <string name="phone_hint">请输入手机号</string>
    <string name="personcenter_title">个人中心</string>
    <string name="tologin">登录/注册</string>
    <string name="logout">退出登录</string>

    <string name="register">注册</string>
    <string name="register_password_hint">请输入密码</string>
    <string name="register_password2_hint">请再次确认密码</string>
    <string name="register_to_login">已有账户登录</string>
    <string name="register_problem">注册遇到问题？</string>
    <string name="register_thirdpart">———第三方账号注册———</string>

    <string name="weekDay">星期几</string>

    <string name="model_name">模板名称</string>
    <string name="week_switch">周视图</string>
    <string name="plan_title">生成计划</string>
    <string name="import_model">导入模板</string>
    <string name="import_no_model">不导入模板</string>

    <string name="show_todo">显示已有事项</string>
    <string name="add_todo">添加事项</string>
    <string name="show_habit">显示已有习惯</string>
    <string name="add_habit">导入习惯</string>
    <string name="create_plan">生成计划</string>

    <string name="todo_title">待办事项</string>
    <string name="todo_name">事项名称</string>
    <string name="todo_name_input_hint">制作寸光</string>
    <string name="todo_category">事项属性</string>
    <string name="todo_time">事项时间段</string>
    <string name="todo_timelength">事项时长</string>
    <string name="todo_time_hint">0</string>
    <string name="todo_time_hour">小时</string>

    <string name="clear">清空</string>
    <string name="weekNum">每周至少完成次数</string>

    <string name="modify_number">序号</string>
    <string name="modify_name">名称</string>
    <string name="modify_week">星期</string>
    <string name="modify_start_time">开始</string>
    <string name="modify_end_time">结束</string>
    <string name="modify_count">次数</string>

    <string name="card_modify_number">序号</string>
    <string name="card_modify_name">名称</string>
    <string name="card_modify_week">星期</string>
    <string name="card_modify_start_time">开始</string>
    <string name="card_modify_end_time">结束</string>
    <string name="card_modify_count">次数</string>

    <string name="clock_title">自控力闹钟</string>
    <string name="button_accord">自觉模式</string>
    <string name="button_force">强制模式</string>
    <string name="button_boring">无趣模式</string>

    <string name="clock_time_title">选择时长</string>
    <string name="button_time_begin">开始计时</string>
    <string name="hint_hour">0</string>
    <string name="hint_minute">0</string>
    <string name="clock_hour_text">小时</string>
    <string name="clock_minute_text">分钟</string>

    <string name="white_title">白名单</string>
    <string name="card_white_number">序号</string>
    <string name="card_white_name">名称</string>

    <string name="main_mid_start">开始</string>

    <string name="week_modify_title">计划名称</string>
    <string name="week_modify_switch">显示修改列表</string>
    <string name="week_modify_confirm">生成计划</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="spalsh_mid_notes">提高效率\n远离手机</string>
    <string name="monitor_mid_notes">不用不能活</string>
    <string name="monitor_mid_sign">(?_?)</string>

    <string name="spalsh_bottom_rights"><b>@</b>一个叫gun的app</string>

    <string name="Is_modify">更改模式</string>
    <string name="plan_final_title">计划名称</string>

    <string name="plan_show_title">计划列表</string>

    <string name="card_plan_number">序号</string>
    <string name="card_plan_name">计划名称</string>
    <string name="card_plan_start">开始日期</string>
    <string name="card_plan_end">结束日期</string>
    <string name="start_end_time">起止时间</string>

    <string name="plan_finish_title">计划完成度反馈</string>
    <string name="plan_finish_name">事项名称</string>
    <string name="plan_finish_time">事项用时</string>
    <string name="plan_finish_button">确认</string>

    <string name="planlist_title">所有计划</string>
    <string name="give_up">放弃</string>
    <string name="white_confirm">确认</string>

    <string name="isFinishOn">完成</string>
    <string name="isFinishOff">未完成</string>
    <string name="fail_input">失败原因</string>

</resources>
