<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/fail_linear"
        style="@style/InputBoxStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/guideline162"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline160">

        <EditText
            android:id="@+id/fail_input"
            style="@style/EditTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/fail_input"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />
    </LinearLayout>

    <View
        android:id="@+id/view20"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/guideline157"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/desc"
        app:layout_constraintBottom_toTopOf="@+id/guideline157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_keyboard_arrow_left_black_24dp" />

    <TextView
        android:id="@+id/plan_finish_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plan_finish_title"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline157"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline157"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <TextView
        android:id="@+id/plan_finish_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plan_finish_name"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline158"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline157" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline158"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline159"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline160"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <TextView
        android:id="@+id/plan_finish_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plan_finish_time"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline159"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline158" />

    <Button
        android:id="@+id/plan_finish_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_selected_shape"
        android:text="@string/plan_finish_button"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline162" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline161"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <Switch
        android:id="@+id/isFinish"
        android:layout_width="106dp"
        android:layout_height="41dp"
        android:textOff="@string/isFinishOff"
        android:textOn="@string/isFinishOn"
        app:layout_constraintBottom_toTopOf="@+id/guideline160"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline159" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline162"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

</androidx.constraintlayout.widget.ConstraintLayout>