<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <!--        app:srcCompat="@drawable/logo" />-->

    <Button
        android:id="@+id/register"
        android:layout_width="114dp"
        android:layout_height="62dp"
        android:text="@string/register"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline30"
        app:layout_constraintEnd_toStartOf="@+id/guideline24"
        app:layout_constraintStart_toStartOf="@+id/guideline23"
        app:layout_constraintTop_toTopOf="@+id/guideline29" />

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_to_login"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline24"
        app:layout_constraintTop_toTopOf="@+id/guideline30" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#EBEBEB"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/guideline27"
        app:layout_constraintEnd_toStartOf="@+id/guideline24"
        app:layout_constraintStart_toStartOf="@+id/guideline78"
        app:layout_constraintTop_toTopOf="@+id/guideline26"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#EBEBEB"
        android:ems="10"
        android:hint="@string/username_hint"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/guideline27"
        app:layout_constraintEnd_toStartOf="@+id/guideline24"
        app:layout_constraintStart_toStartOf="@+id/guideline78"
        app:layout_constraintTop_toTopOf="@+id/guideline26"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#EBEBEB"
        android:ems="10"
        android:hint="@string/phone_hint"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/guideline27"
        app:layout_constraintEnd_toStartOf="@+id/guideline24"
        app:layout_constraintStart_toStartOf="@+id/guideline78"
        app:layout_constraintTop_toTopOf="@+id/guideline26"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#EBEBEB"
        android:ems="10"
        android:hint="@string/register_password_hint"
        android:inputType="textPassword"
        android:padding="5dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline28"
        app:layout_constraintEnd_toStartOf="@+id/guideline24"
        app:layout_constraintStart_toStartOf="@+id/guideline23"
        app:layout_constraintTop_toTopOf="@+id/guideline27"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/password2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#EBEBEB"
        android:ems="10"
        android:hint="@string/register_password2_hint"
        android:inputType="textPassword"
        android:padding="5dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline29"
        app:layout_constraintEnd_toStartOf="@+id/guideline24"
        app:layout_constraintStart_toStartOf="@+id/guideline23"
        app:layout_constraintTop_toTopOf="@+id/guideline28"
        android:importantForAutofill="no" />

    <ImageView
        android:id="@+id/register_qq"
        android:layout_width="65dp"
        android:layout_height="56dp"
        android:contentDescription="@string/desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline78"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_thirdpart"
        app:srcCompat="@drawable/qq" />

    <ImageView
        android:id="@+id/register_wechat"
        android:layout_width="69dp"
        android:layout_height="64dp"
        android:contentDescription="@string/desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="@+id/guideline78"
        app:layout_constraintTop_toBottomOf="@+id/register_thirdpart"
        app:srcCompat="@drawable/wechat" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="33dp"
        android:background="#EBEBEB"
        android:entries="@array/loginway"
        app:layout_constraintBottom_toTopOf="@+id/guideline27"
        app:layout_constraintEnd_toStartOf="@+id/guideline31"
        app:layout_constraintStart_toStartOf="@+id/guideline23"
        app:layout_constraintTop_toTopOf="@+id/guideline26" />

    <TextView
        android:id="@+id/register_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline26"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/register_problem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_problem"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/next"
        app:layout_constraintStart_toStartOf="@+id/guideline23"
        app:layout_constraintTop_toTopOf="@+id/guideline30" />

    <TextView
        android:id="@+id/register_thirdpart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_thirdpart"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline77" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline31"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline77"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline78"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.41" />

</androidx.constraintlayout.widget.ConstraintLayout>