<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/clock_hour_linear"
        style="@style/InputBoxStyle"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline135"
        app:layout_constraintEnd_toStartOf="@+id/guideline139"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline133">

        <EditText
            android:id="@+id/clock_hour_input"
            style="@style/EditTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/hint_hour"
            android:importantForAutofill="no"
            android:inputType="numberSigned"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/clock_minute_linear"
        style="@style/InputBoxStyle"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline135"
        app:layout_constraintEnd_toStartOf="@+id/guideline140"
        app:layout_constraintStart_toStartOf="@+id/guideline138"
        app:layout_constraintTop_toTopOf="@+id/guideline133">

        <EditText
            android:id="@+id/clock_minute_input"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/hint_minute"
            android:importantForAutofill="no"
            android:inputType="numberSigned"
            android:textSize="24sp" />

    </LinearLayout>

    <View
        android:id="@+id/view15"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/guideline133"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline133"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <TextView
        android:id="@+id/clock_time_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clock_time_title"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline133"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/view15"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/clock_time_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/desc"
        app:layout_constraintBottom_toTopOf="@+id/guideline133"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_keyboard_arrow_left_black_24dp" />

    <Button
        android:id="@+id/button_clock_begin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_selected_shape"
        android:text="@string/button_time_begin"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline137"
        app:layout_constraintStart_toStartOf="@+id/guideline136"
        app:layout_constraintTop_toTopOf="@+id/guideline135" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline135"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline136"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline137"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.68" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline138"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/clock_hour_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clock_hour_text"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline135"
        app:layout_constraintEnd_toStartOf="@+id/guideline138"
        app:layout_constraintStart_toEndOf="@+id/clock_hour_linear"
        app:layout_constraintTop_toTopOf="@+id/guideline133" />

    <TextView
        android:id="@+id/clock_minute_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clock_minute_text"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline135"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/clock_minute_linear"
        app:layout_constraintTop_toTopOf="@+id/guideline133" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline139"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline140"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>